# xpccutxx

./: .gitignore  INSTALL  Makefile.am  README  TODO  VERSION  bootstrap  pack  rebuild
contrib/automake/: configure.ac
contrib/debian/: Notes  README.Debian  changelog  control  control-xpc  control-xpc++  control-xpccut++  copyright  libxpc1.doc-base  libxpccut++1.doc-base  libxpccut-dev.dirs  libxpccut-dev.install  libxpccut1.dirs  libxpccut1.doc-base  libxpccut1.install  rules
contrib/po/: Makefile.am.fresh  Makevars.template  configure.ac.fresh
contrib/w32/: configuration.h  xpc-config-mingw32.h  xpc-config-msvc.h
doc/: Makefile.am  README
doc/dox/: Makefile.am  doxygen.cfg  make_dox  xpc_automake.dox  xpc_git.dox  xpc_git_subversion_bridge.dox  xpc_license.dox  xpc_mainpage_generic.dox  xpc_mingw.dox  xpc_subversion.dox  xpc_suite.dox
doc/dox/debian/: xpc_debian.dox
doc/dox/debugging/: xpc_coverage_profiling.dox  xpc_debugging.dox
doc/dox/xpccut/: xpccut_introduction.dox
doc/dox/xpccut++/: xpccutpp_introduction.dox
include/: Makefile.am  README
include/xpc/: Makefile.am  config.h.in  configuration.h  xpc-config-mingw32.h  xpc-config-msvc.h  xpc-configuration.h
m4/: Makefile.am  README  xpc_64_bit.m4  xpc_endian.m4  xpc_gettext.m4  xpc_profile.m4  xpc_qt3.m4  xpc_stackcheck.m4  xpc_sun_ws.m4
man/: Makefile.am  README  xpccut++.1  xpccut.1
pkgconfig/: Makefile.am  README  xpccut++-1.1.pc  xpccut++-1.1.pc.in  xpccut-1.1.pc  xpccut-1.1.pc.in
po/: POTFILES.xpc.in  README  README-po-w32
po/backup/: ChangeLog  LINGUAS
scripts/: bootstrap-po.help  bootstrap.help  build  build.help  dot-gitignore  git_setup  ld_config.sh  simplify.sed  version-fix  xpc-bootstrap-po  xpc_boot_functions  xpc_boot_makegnus  xpccut-install
src/: dummy.c
xpccut/: Makefile.am  README
xpccut++/: Makefile.am
xpccut++/include/: Makefile.am
xpccut++/include/xpc/: Makefile.am  cut.hpp  cut_fuzz.hpp  cut_options.hpp  cut_sequence.h  cut_sequence.hpp  cut_status.hpp
xpccut++/resources/: template_unit_test.cpp  template_unit_test.hpp
xpccut++/src/: Makefile.am  cut.cpp  cut_fuzz.cpp  cut_options.cpp  cut_sequence.cpp  cut_status.cpp
xpccut++/tests/: Makefile.am  cut_unit_test.cpp  test_script
xpccut++/w32/: Makefile.am  README  cut_unit_test.10.vcxproj  cutpp.10.sln  libcutpp.10.vcxproj  libcutpp.10.vcxproj.filters  xpc-config.h
xpccut/include/: Makefile.am
xpccut/include/xpc/: Makefile.am  fuzz.h  macros_subset.h  portable_subset.h  unit_test.h  unit_test_options.h  unit_test_status.h
xpccut/src/: Makefile.am  fuzz.c  portable_subset.c  unit_test.c  unit_test_options.c  unit_test_status.c
xpccut/tests/: 09_02-random.txt  09_02-xpccut-random.txt  09_03.input  Makefile.am  README  example.input  test  test_script  unit_test_test.c
xpccut/w32/: Makefile.am  libxpccut.10.vcxproj  libxpccut.10.vcxproj.filters  unit_test_test.10.vcxproj  unit_test_test.10.vcxproj.filters  xpc-config.h  xpccut.10.sln
