#*****************************************************************************
# Makefile.am (XPCCUT/include)
#-----------------------------------------------------------------------------
##
# \file       	Makefile.am
# \library    	XPCCUT
# \author     	Chris Ahlstrom
# \date       	2011-12-26
# \update     	2015-10-05
# \version    	$Revision$
# \license    	$XPC_SUITE_GPL_LICENSE$
#
#     This file provides an GNU Autotools makefile for the XPC suite's
#     main ./include directory.  This directory is the common location where
#     all sub-projects will find the xpc-config.h module.
#
#-----------------------------------------------------------------------------

SUBDIRS = xpc

#******************************************************************************
# Makefile.am (XPC/include)
#------------------------------------------------------------------------------
# vim: ts=3 sw=3 noet ft=automake
#------------------------------------------------------------------------------
